changes to qualitative modelling